Add --patch-module to IntelliJ build config