@@ -61,12 +61,14 @@ Then double click inside the cell "Compilation options" and enter following para
 ```text
 --add-exports=javafx.controls/com.sun.javafx.scene.control=org.jabref
 --add-exports=org.controlsfx.controls/impl.org.controlsfx.skin=org.jabref
+--add-exports=langchain4j/dev.langchain4j.model.input=org.jabref
 --add-reads org.jabref=org.apache.commons.csv
 --add-reads org.jabref=org.fxmisc.flowless
 --add-reads org.jabref=langchain4j.core
 --add-reads org.jabref=langchain4j.embeddings.all.minilm.l6.v2
 --add-reads org.jabref=langchain4j.embeddings.all.minilm.l6.v2.q
 --add-reads org.jabref=langchain4j.open.ai
+--patch-module langchain4j=langchain4j-core-0.31.0.jar;langchain4j-embeddings-0.31.0.jar;langchain4j-embeddings-all-minilm-l6-v2-0.31.0.jar;langchain4j-embeddings-all-minilm-l6-v2-q-0.31.0.jar;langchain4j-open-ai-0.31.0.jar
 ```
 
 Press <kbd>Enter</kbd> to have the value really stored.
